# bot-chan

./: .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .tool-versions  Dockerfile  Dockerfile.ci  Dockerfile.db  Dockerfile.tool  Makefile  README.md  alembic.ini  docker-compose-ci.yml  docker-compose.yml  env.ci  env.dev.template  env.template  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  setup.py  setup_slack_app.md
.github/workflows/: intergation.yml  intergation_test.yml  lint.yaml  pylint.yml  unit_test.yml
alembic/: env.py
alembic/versions/: 30971fed395f_init_character_table.py  c6b7898db79a_init_character_table.py  f5d85768d810_add_task_config_column_to_character.py
botchan/: adhoc.py  agent.py  app.py  app_home.py  buffer_callback.py  cli.py  constants.py  logger.py  message_event_handler.py  message_intent.py  mrkl.py  multi_intent_agent.py  prompt.py  server.py  settings.py  types.py
botchan/agents/: __init__.py  agent_base.py  chat.py  chat_agent.py  chat_agent_prompt.py  expert_agent.py  knowledge_agent.py  message_agent.py  message_intent_agent.py  miao_agent.py  mrkl.py  mrkl_agent.py  openai_assistants_agent.py  openai_chat_agent.py  openai_whisper_agent.py  prompt_bank.py
botchan/chain/: prompt_utils.py
botchan/core/: bot_proxy.py
botchan/discord/: __init__.py  adapter.py  bot_client.py  chat.py  client.py  discord_bot_proxy.py  guild.py  reaction.py
botchan/index/: doc_kind.py  utils.py
botchan/intent/: intent_agent.py  intent_candidate.py  intent_macher_base.py  intent_matcher.py  intent_matcher_base.py  message_intent.py  openai_intent_matcher.py  rag_intent_matcher.py
botchan/open/: __init__.py  chat_utils.py  common.py  files.py  openai_whisper.py
botchan/openai/: __init__.py  chat_utils.py  common.py  files.py  openai_whisper.py
botchan/rag/: knowledge_base.py  knowledge_doc.py
botchan/slack/: __init__.py  adaper.py  auth.py  bot_client.py  channel.py  chat.py  client.py  exception.py  messages_fetcher.py  reaction.py  shared.py  slack_bot_proxy.py  user.py
botchan/task/: base.py
botchan/tools/: llm_math.py  serp_api.py
botchan/utt/: files.py  regex.py  singleton.py  snowflake.py  template.py  timed.py
design/: design.excalidraw
fluctlight/: async_cli.py  cli.py  logger.py  server.py  settings.py  types.py
fluctlight/agent_catalog/: catalog_manager.py
fluctlight/agents/: message_intent_agent.py  miao_agent.py  openai_chat_agent.py  prompt_bank.py
fluctlight/character_model/: __init__.py  base.py  openai_chat.py
kube/: test-deployment.yaml
rest/: README.md  create_char.http  list_chars.http
tests/: intergation_test_utils.py  test_data.py  test_multi_intent_agent.py  test_settings.py
(+150 files in other folders)
