[tool.poetry]
name = "botchan"
version = "0.1.0"
description = ""
authors = ["ZF"]

[tool.poetry.dependencies]
python = "^3.9"
structlog = "^23.1.0"
slack-bolt = "^1.18.0"
click = "^8.1.3"

pydantic = "^1.10.7"
toolz = "^0.12.0"
google-search-results = "^2.4.2"
wikipedia = "^1.4.0"
arxiv = "^1.4.8"
langchain = "^0.1.10"
langchain-community = "^0.0.25"
langchainhub = "^0.1.14"
langchain-openai = "^0.0.8"
chromadb = "^0.3.29"
bs4 = "^0.0.2"
numexpr = "^2.9.0"
fake-useragent = "^1.4.0"
pypdf = "^4.1.0"
openai = "^1.45.0"
faiss-cpu = "^1.8.0.post1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.3"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
cli = "botchan.cli:main"
