[tool.poetry]
name = "fluctlight"
version = "0.1.0"
description = "fluctlight python API"
authors = ["ZF"]

[tool.poetry.dependencies]
python = "^3.11.10"
structlog = "^23.1.0"
slack-bolt = "^1.18.0"
click = "^8.1.3"
pydantic = { version = "^2.9.2", extras = ["email"] }
toolz = "^0.12.0"
langchain = "^0.3.4"
langgraph = "^0.2.39"
langchain-community = "^0.3.3"
langchainhub = "^0.1.21"
langchain-openai = "^0.2.3"
langchain-fireworks = "^0.2.1"
chromadb = "^0.5.15"
bs4 = "^0.0.2"
numexpr = "^2.9.0"
fake-useragent = "^1.4.0"
pypdf = "^4.1.0"
openai = "^1.45.0"
jinja2 = "^3.1.4"
asyncclick = "^8.1.7.2"
pydub = "^0.25.1"
discord-py = "^2.4.0"
emoji = "^2.14.0"
speechrecognition = "^3.11.0"
aiofiles = "^24.1.0"
readerwriterlock = "^1.0.9"
pgvector = "^0.3.6"
psycopg2-binary = "^2.9.10"
python-multipart = "^0.0.17"
alembic = "^1.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
